fix(core/issues-notes): fix issue label color contrast

--- a/assets/issues-notes.css
+++ b/assets/issues-notes.css
@@ -52,13 +52,3 @@ input.task-list-item-checkbox {
   border: none;
   display: inline-block;
 }
-
-.issue a.respec-label-dark {
-  color: #fff;
-  background-color: #000;
-}
-
-.issue a.respec-label-light {
-  color: #000;
-  background-color: #fff;
-}
